[project]
name = "gratopy"
version = "0.1.0"
description = "Gratopy - Graz accelerated tomographic projections for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Kristian Bredies", email = "kristian.bredies@uni-graz.at"},
    {name = "Richard Huber"},
]
classifiers = [
    "Environment :: Console",
    "Environment :: GPU",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = [
    "Radon transform", "fanbeam transform", "pixel-driven projection methods",
    "computed tomography", "image reconstruction", "pyopencl",
]
requires-python = ">=3.10"
dependencies = [
    "mako>=1.3.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.1.0",
    "pyopencl>=2025.1",
    "scipy>=1.13.1",
    "scipy>=1.15.0 ; python_full_version >= '3.13'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.3",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
Documentation = "https://gratopy.readthedocs.io"
Repository = "https://github.com/kbredies/gratopy"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["C", "E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"gratopy.py" = ["C901"]
