[metadata]
# replace with your username:
name = grato
version = 0.1.0.dev0
author = Richard Huber, Kristian Bredies
author_email = kristian.bredies@uni-graz.at
description = An OpenCL toolbox for optimization-based CT reconstruction
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kbredies/grato
project_urls =
    Bug Tracker = https://github.com/kbredies/grato/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.6
zip_safe  = False
include_package_data = True
packages = grato
test_suite = nose.collector
tests_require = nose

[options.package_data]
grato = *.cl